---------------------------------------------------------------------
Release 0.5
---------------------------------------------------------------------
NEW FEATURES:
* jasmineMatchers.toBeInstanceOf()
* jasmineMatchers.toBeFalse()
* jasmineMatchers.toBeTrue()

CHANGES:
* Renamed jasmineMatchers.toHaveReadonly() to jasmineMatchers.toHaveReadonlyProperty()

---------------------------------------------------------------------
Release 0.3
---------------------------------------------------------------------
NEW FEATURES:
* jasmineMatchers.toHaveProperty()

CHANGES:
* Improved docs

---------------------------------------------------------------------
Release 0.2
---------------------------------------------------------------------
NEW FEATURES:
* jasmineMatchers.toHaveProp()

CHANGES:
* Improved docs

---------------------------------------------------------------------
Release 0.1
---------------------------------------------------------------------