@@ -2,7 +2,6 @@ Release 0.4
 
 ADDITIONAL MATCHERS:
 
-- toBeExtensible()
 - toBeFrozen()
 - toBeSealed()
 
